<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content"

    >
    <ImageView
        android:id="@+id/col1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:layout_weight="4"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/col2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/col2"

        android:padding="10sp"
        android:textSize="14sp"
        android:layout_weight="4"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/col3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/col3"

        android:padding="10sp"
        android:textSize="14sp"
        android:layout_weight="4"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/col4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/col4"

        android:padding="10sp"
        android:textSize="14sp"
        android:layout_weight="4"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/col5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/col5"

        android:padding="10sp"
        android:textSize="14sp"
        android:layout_weight="4"
        android:gravity="center_horizontal" />
</TableRow>