<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312"
        tools:layout_editor_absoluteX="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/RegisterImageViewAvatar"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:scaleType="centerCrop"
                android:background="@color/colorGray" />
              <!--  tools:src="@drawable/ic_user"-->


            <EditText
                android:id="@+id/RegisterEditTextEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_email"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="72dp" />

            <EditText
                android:id="@+id/RegisterEditTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="137dp" />

            <EditText
                android:id="@+id/RegisterEditTextManufacturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_manufacturer"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="251dp" />

            <EditText
                android:id="@+id/RegisterEditTextModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_model"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="324dp" />

            <EditText
                android:id="@+id/RegisterEditTextBitsdepth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_bitsdepth"
                android:inputType="numberSigned"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="383dp" />

            <EditText
                android:id="@+id/RegisterEditTextFrequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_frequency"
                android:inputType="numberDecimal"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="494dp" />

            <EditText
                android:id="@+id/RegisterEditTextNumcores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reg_numcores"
                android:inputType="numberSigned"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="436dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="registerClick"
                android:text="@string/reg_bregister"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="578dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>