<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="aminlexscorp.cpu_catalog2.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
       <!-- <action
            android:id="@+id/action_navigation_home_to_userDetailsFragment"
            app:destination="@id/userDetailsFragment"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />-->
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="aminlexscorp.cpu_catalog2.fragments.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" >
       <!-- <action
            android:id="@+id/action_navigation_map_to_userDetailsFragment"
            app:destination="@id/userDetailsFragment"
            app:popUpTo="@id/navigation_map" />-->
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="aminlexscorp.cpu_catalog2.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <!--<fragment
        android:id="@+id/userDetailsFragment"
        android:name="by.kolovaitis.youtubechannels.ui.details.UserDetailsFragment"
        android:label="@string/details" >
        <argument
            android:name="user"
            app:argType="string" />
    </fragment>-->
</navigation>