<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/TableActivityTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:overScrollMode="always"
            tools:layout_editor_absoluteX="10dp">

            <ImageView
                android:id="@+id/editAvatarImage"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                app:srcCompat="@drawable/ic_user" />

            <EditText
                android:id="@+id/editNumcores"
                android:layout_width="360dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/edit_numcores"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editFrequency" />

            <EditText
                android:id="@+id/editModel"
                android:layout_width="359dp"
                android:layout_height="40dp"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/edit_model"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editAvatarImage" />

            <EditText
                android:id="@+id/editManufacturer"
                android:layout_width="357dp"
                android:layout_height="40dp"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/edit_manufacturer"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editModel" />

            <EditText
                android:id="@+id/editBitsdepth"
                android:layout_width="360dp"
                android:layout_height="40dp"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/edit_bitsdepth"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editManufacturer" />

            <EditText
                android:id="@+id/editFrequency"
                android:layout_width="360dp"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/edit_frequency"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editBitsdepth" />


            <EditText
                android:id="@+id/editLat"
                android:layout_width="169dp"
                android:layout_height="40dp"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/edit_latitude"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editNumcores" />

            <EditText
                android:id="@+id/editLon"
                android:layout_width="171dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/edit_longitude"
                android:inputType="textPersonName"
                app:layout_constraintStart_toEndOf="@+id/editLat"
                app:layout_constraintTop_toBottomOf="@+id/editNumcores" />

            <EditText
                android:id="@+id/editDesc"
                android:layout_width="171dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/edit_description"
                android:inputType="textPersonName" />


            <!-- <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="28dp">
       <!- app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumcores"-->

            <!-- <Button
             android:id="@+id/editButton"
             android:layout_width="132dp"
             android:layout_height="54dp"
             android:layout_marginBottom="16dp"
             android:text="@string/edit_button_save"
             tools:layout_editor_absoluteX="136dp" />-->

            <!--  <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editDesc"
             android:layout_width="344dp"
             android:layout_height="72dp"
             android:hint="@string/edit_description"
             android:scrollbars="vertical" />

     </com.google.android.material.textfield.TextInputLayout>-->

            <!--app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"-->

        </TableLayout>
    </ScrollView>>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/purple_200"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>